Bug 274161 - Plasma crash when i configured 3g modem
Summary: Plasma crash when i configured 3g modem
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 272267 273250 276968 282306 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-26 01:38 UTC by Sebastián Ramírez
Modified: 2011-09-19 01:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastián Ramírez 2011-05-26 01:38:16 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic i686
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:

Plasma crash when i configured 3g modem and click on connect this.

Plasma fallla cuando configuro el modem 3g y hago click para conectarlo.

-- Backtrace:
Application: Shell de escritorio Plasma (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb6154720 (LWP 1471))]

Thread 4 (Thread 0xb3c99b70 (LWP 1473)):
#0  0x03831d41 in clock_gettime (clock_id=1, tp=0xb3c98ff0) at ../sysdeps/unix/clock_gettime.c:116
#1  0x010efdd8 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x011bc4f2 in updateCurrentTime (this=0x934e5cc, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0x934e5cc, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x011bad32 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb3c990cc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x011badcd in timerSourcePrepare (source=0x934e598, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x02d05fd4 in g_main_context_prepare (context=<value optimized out>, priority=0xb3c9913c) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:2761
#8  0x02d06e63 in g_main_context_iterate (context=0x92fcfc8, block=1, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3071
#9  0x02d07524 in g_main_context_iteration (context=0x92fcfc8, may_block=1) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3154
#10 0x011bb577 in QEventDispatcherGlib::processEvents (this=0x930c2f8, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x0118d289 in QEventLoop::processEvents (this=0xb3c99280, flags=...) at kernel/qeventloop.cpp:149
#12 0x0118d522 in QEventLoop::exec (this=0xb3c99280, flags=...) at kernel/qeventloop.cpp:201
#13 0x010972a0 in QThread::exec (this=0x9345820) at thread/qthread.cpp:492
#14 0x0116efdb in QInotifyFileSystemWatcherEngine::run (this=0x9345820) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x01099da2 in QThreadPrivate::start (arg=0x9345820) at thread/qthread_unix.cpp:320
#16 0x06b62e99 in start_thread (arg=0xb3c99b70) at pthread_create.c:304
#17 0x001e073e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 3 (Thread 0xacc6cb70 (LWP 1475)):
#0  0x02d05f9e in g_main_context_prepare (context=<value optimized out>, priority=0xacc6c13c) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:2759
#1  0x02d06e63 in g_main_context_iterate (context=0x93dae08, block=1, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3071
#2  0x02d07524 in g_main_context_iteration (context=0x93dae08, may_block=1) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3154
#3  0x011bb577 in QEventDispatcherGlib::processEvents (this=0x93daa90, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x0118d289 in QEventLoop::processEvents (this=0xacc6c280, flags=...) at kernel/qeventloop.cpp:149
#5  0x0118d522 in QEventLoop::exec (this=0xacc6c280, flags=...) at kernel/qeventloop.cpp:201
#6  0x010972a0 in QThread::exec (this=0x93e20c8) at thread/qthread.cpp:492
#7  0x0116efdb in QInotifyFileSystemWatcherEngine::run (this=0x93e20c8) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x01099da2 in QThreadPrivate::start (arg=0x93e20c8) at thread/qthread_unix.cpp:320
#9  0x06b62e99 in start_thread (arg=0xacc6cb70) at pthread_create.c:304
#10 0x001e073e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xabc63b70 (LWP 1480)):
#0  0x06b667a4 in __pthread_mutex_unlock_usercnt (mutex=0x94dca0c, decr=1) at pthread_mutex_unlock.c:52
#1  0x001ee656 in pthread_mutex_unlock (mutex=0x94dca0c) at forward.c:184
#2  0x02d06dd6 in g_main_context_iterate (context=0x94dca08, block=1, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3032
#3  0x02d0792b in g_main_loop_run (loop=0x94dc9f8) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3299
#4  0x043f2304 in gdbus_shared_thread_func (data=0x0) at /build/buildd/glib2.0-2.28.6/./gio/gdbusprivate.c:276
#5  0x02d302df in g_thread_create_proxy (data=0x94dca98) at /build/buildd/glib2.0-2.28.6/./glib/gthread.c:1897
#6  0x06b62e99 in start_thread (arg=0xabc63b70) at pthread_create.c:304
#7  0x001e073e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb6154720 (LWP 1471)):
[KCrash Handler]
#7  RemoteInterfaceConnection::connectionName (this=0x0) at ../../../libs/client/remoteinterfaceconnection.cpp:67
#8  0x044d5266 in GsmInterfaceConnectionItem::setAccessTechnology (this=0x9bb1430, tech=...) at ../../applet/gsminterfaceconnectionitem.cpp:139
#9  0x044d5405 in GsmInterfaceConnectionItem::update (this=0x9bb1430) at ../../applet/gsminterfaceconnectionitem.cpp:169
#10 0x044bc2f3 in GsmInterfaceConnectionItem::qt_metacall (this=0x9bb1430, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbffe4fdc) at moc_gsminterfaceconnectionitem.cpp:82
#11 0x011946ba in QMetaObject::metacall (object=0x9bb1430, cl=QMetaObject::InvokeMetaMethod, idx=48, argv=0xbffe4fdc) at kernel/qmetaobject.cpp:237
#12 0x011a44ff in QMetaObject::activate (sender=0x9f504d0, m=0x44f6790, local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3287
#13 0x044e4337 in RemoteActivatable::changed (this=0x9f504d0) at moc_remoteactivatable.cpp:124
#14 0x044e44ae in RemoteActivatable::qt_metacall (this=0x9f504d0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbffe51ac) at moc_remoteactivatable.cpp:82
#15 0x044e454b in RemoteInterfaceConnection::qt_metacall (this=0x9f504d0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbffe51ac) at moc_remoteinterfaceconnection.cpp:83
#16 0x044e4e1a in RemoteGsmInterfaceConnection::qt_metacall (this=0x9f504d0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbffe51ac) at moc_remotegsminterfaceconnection.cpp:76
#17 0x011946ba in QMetaObject::metacall (object=0x9f504d0, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0xbffe51ac) at kernel/qmetaobject.cpp:237
#18 0x011a44ff in QMetaObject::activate (sender=0x9e27aa8, m=0x44f6ca4, local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3287
#19 0x044eca27 in ActivatableInterface::changed (this=0x9e27aa8) at activatableinterface.moc:135
#20 0x044ed02b in ActivatableInterface::qt_metacall (this=0x9e27aa8, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbffe536c) at activatableinterface.moc:88
#21 0x00699acd in QDBusConnectionPrivate::deliverCall (this=0x8f34190, object=0x9e27aa8, msg=..., metaTypes=..., slotIdx=6) at qdbusintegrator.cpp:942
#22 0x006a41d7 in QDBusCallDeliveryEvent::placeMetaCall (this=0xa0aa530, object=0x9e27aa8) at qdbusintegrator_p.h:103
#23 0x011a33b7 in QObject::event (this=0x9e27aa8, e=0xa0aa530) at kernel/qobject.cpp:1226
#24 0x04a4dd24 in QApplicationPrivate::notify_helper (this=0x8f423a0, receiver=0x9e27aa8, e=0xa0aa530) at kernel/qapplication.cpp:4462
#25 0x04a528ce in QApplication::notify (this=0x8f33af0, receiver=0x9e27aa8, e=0xa0aa530) at kernel/qapplication.cpp:3862
#26 0x00e703ca in KApplication::notify (this=0x8f33af0, receiver=0x9e27aa8, event=0xa0aa530) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x0118e0bb in QCoreApplication::notifyInternal (this=0x8f33af0, receiver=0x9e27aa8, event=0xa0aa530) at kernel/qcoreapplication.cpp:731
#28 0x01191c79 in sendEvent (receiver=0x0, event_type=0, data=0x8ec7f68) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8ec7f68) at kernel/qcoreapplication.cpp:1372
#30 0x01191e0d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#31 0x011bb3c4 in sendPostedEvents (s=0x8f3d138) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#32 postEventSourceDispatch (s=0x8f3d138) at kernel/qeventdispatcher_glib.cpp:277
#33 0x02d06aa8 in g_main_dispatch (context=0x8f3d918) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:2440
#34 g_main_context_dispatch (context=0x8f3d918) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3013
#35 0x02d07270 in g_main_context_iterate (context=0x8f3d918, block=47282208, dispatch=1, self=<value optimized out>) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3091
#36 0x02d07524 in g_main_context_iteration (context=0x8f3d918, may_block=1) at /build/buildd/glib2.0-2.28.6/./glib/gmain.c:3154
#37 0x011bb53c in QEventDispatcherGlib::processEvents (this=0x8ec7ac0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#38 0x04b01775 in QGuiEventDispatcherGlib::processEvents (this=0x8ec7ac0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x0118d289 in QEventLoop::processEvents (this=0xbffe5b54, flags=...) at kernel/qeventloop.cpp:149
#40 0x0118d522 in QEventLoop::exec (this=0xbffe5b54, flags=...) at kernel/qeventloop.cpp:201
#41 0x01191ecc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#42 0x04a4b8e7 in QApplication::exec () at kernel/qapplication.cpp:3736
#43 0x0074e5a5 in kdemain (argc=1, argv=0xbffe5d64) at ../../../../plasma/desktop/shell/main.cpp:118
#44 0x080485cb in main (argc=1, argv=0xbffe5d64) at plasma-desktop_dummy.cpp:3

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-05-26 07:58:01 UTC
Git commit 911025d81fdfbe09b64705e94e5411f521c38e3e by Lamarque V. Souza.
Committed on 26/05/2011 at 07:57.
Pushed by lvsouza into branch 'master'.

Test the RemoteGsmInterfaceConnection object before using it.

BUG: 274161

M  +23   -16   applet/gsminterfaceconnectionitem.cpp     
M  +0    -1    applet/gsminterfaceconnectionitem.h     

http://commits.kde.org/networkmanagement/911025d81fdfbe09b64705e94e5411f521c38e3e
Comment 2 Lamarque V. Souza 2011-05-26 07:58:02 UTC
Git commit 228cc9162d8c59ce441cf45edd6e0c51838c64aa by Lamarque V. Souza.
Committed on 26/05/2011 at 07:57.
Pushed by lvsouza into branch 'nm09'.

Test the RemoteGsmInterfaceConnection object before using it.

BUG: 274161
(cherry picked from commit 911025d81fdfbe09b64705e94e5411f521c38e3e)

M  +23   -16   applet/gsminterfaceconnectionitem.cpp     
M  +0    -1    applet/gsminterfaceconnectionitem.h     

http://commits.kde.org/networkmanagement/228cc9162d8c59ce441cf45edd6e0c51838c64aa
Comment 3 Lamarque V. Souza 2011-06-23 22:15:16 UTC
*** Bug 272267 has been marked as a duplicate of this bug. ***
Comment 4 Lamarque V. Souza 2011-06-23 22:17:20 UTC
*** Bug 273250 has been marked as a duplicate of this bug. ***
Comment 5 Lamarque V. Souza 2011-07-02 19:28:08 UTC
*** Bug 276968 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-09-19 01:17:01 UTC
*** Bug 282306 has been marked as a duplicate of this bug. ***