Test the RemoteGsmInterfaceConnection object before using it.

BUG: 274161
(cherry picked from commit 911025d81fdfbe09b64705e94e5411f521c38e3e)